--- a/FlexibleGrammBackend/package.json
+++ b/FlexibleGrammBackend/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "server.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "start-server": "node server.js"
-  },
+   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  }
   "author": "Martino",
   "license": "ISC",
   "dependencies": {
